Add support for get/set/rm of exchange pairs via gRPC
